# mini-compiler

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
docs/: CHECKLIST.md  grammar.md  language_spec.md
examples/: array_access.src  ast.dot  ast.json  ast.txt  break_continue.src  cfg.dot  codegen_demo.rs  demo_sp1.rs  error.src  errors.src  factorial.dot  factorial.json  factorial_ir.json  float_arith.src  for_factorial.src  full_demo.rs  full_demo.src  full_demo_processed.src  hello.rs  if_else.dot  if_else.src  if_else_cfg.dot  ir.json  macro.src  manual_test.rs  simple_arith.src  sprint6_demo.rs  sprint7_full_demo.src  test.src  test_decorated.src  test_var.src  while.src  while_sum.src
src/: lib.rs  main.rs
src/codegen/: abi.rs  control_flow_generator.rs  expression_generator.rs  label_manager.rs  mod.rs  register_allocator.rs  stack_frame.rs  x86_generator.rs
src/common/: mod.rs  position.rs  token.rs
src/ir/: basic_block.rs  control_flow.rs  inline_optimizer.rs  ir_generator.rs  ir_instructions.rs  ir_printer.rs  mod.rs  peephole_optimizer.rs
src/lexer/: error.rs  mod.rs  scanner.rs
src/parser/: ast.rs  dot_generator.rs  error.rs  error_productions.rs  grammar.txt  json_generator.rs  ll1.rs  mod.rs  parser.rs  pretty_printer.rs  visitor.rs
src/preprocessor/: error.rs  macros.rs  mod.rs
src/runtime/: runtime.asm
src/semantic/: analyzer.rs  errors.rs  mod.rs  pretty_printer.rs  symbol_table.rs  type_system.rs
src/utils/: mod.rs
tests/: abi_compliance_tests.rs  bugs_tests.rs  codegen_tests.rs  control_flow_tests.rs  integration_codegen.rs  integration_tests.rs  ir_golden_tests.rs  ir_optimization_tests.rs  ir_tests.rs  lexer_tests.rs  ll1_tests.rs  parser_tests.rs  preprocessor_tests.rs  semantic_tests.rs
tests/codegen/valid/: arithmetic_ops.rs  (+2 more)
(+62 files in other folders)
