[package]
name = "mini-compiler"
version = "0.1.0"
edition = "2024"
authors = ["Feronski <feronski@mail.ru>"]
description = "A minimal C-like language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/feronski-bkpk/mini-compiler"
readme = "README.md"
keywords = ["compiler", "lexer", "scanner", "education", "c-like"]
categories = ["development-tools::build-utils", "compilers"]
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "docs/**/*",
    "README.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.rust-analyzer]
features = ["full"]

[lib]
name = "minic"
path = "src/lib.rs"
test = true
bench = false
doc = true

[[bin]]
name = "minic"
path = "src/main.rs"
test = true
bench = false
doc = true

[[example]]
name = "demo"
path = "examples/demo_sp1.rs"
test = true
doc = true

[dependencies]
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env", "wrap_help"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.18"
tempfile = "3.8"

[features]
default = []
full = []

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
split-debuginfo = "packed"

[profile.test]
opt-level = 1
debug = 1
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = "symbols"

[profile.bench]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 1

[workspace]
members = ["."]
resolver = "2"